--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                             <button
                               type="button"
                               id="plus"
-                              class="minus flex items-center justify-center bg-light-background w-[35px] h-[35px] rounded-lg font-bold text-2xl"
+                              class="minus flex items-center justify-center bg-light-background w-[35px] h-[35px] rounded-lg font-bold text-2xl touch-manipulation"
                             >
                               <i class="icon-plus -mb-1"></i>
                             </button>
@@ -397,7 +397,7 @@
                             <button
                               id="minus"
                               type="button"
-                              class="plus flex items-center justify-center bg-light-background w-[35px] h-[35px] rounded-lg font-bold text-2xl"
+                              class="plus flex items-center justify-center bg-light-background w-[35px] h-[35px] rounded-lg font-bold text-2xl touch-manipulation"
                             >
                               <i class="icon-minus -mb-1"></i>
                             </button>
@@ -823,6 +823,8 @@
             </div>
           </div>
         </section>
+
+        
       </main>
     </div>
 
