--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
     <title>E-Commerce</title>
     <!-- Icomoon Icons -->
     <link rel="stylesheet" href="./icomoon/style.css" />
@@ -383,7 +381,7 @@
                             <button
                               type="button"
                               id="plus"
-                              class="minus flex items-center justify-center bg-light-background w-[35px] h-[35px] rounded-lg font-bold text-2xl touch-manipulation"
+                              class="minus flex items-center justify-center bg-light-background w-[35px] h-[35px] rounded-lg font-bold text-2xl"
                             >
                               <i class="icon-plus -mb-1"></i>
                             </button>
@@ -397,7 +395,7 @@
                             <button
                               id="minus"
                               type="button"
-                              class="plus flex items-center justify-center bg-light-background w-[35px] h-[35px] rounded-lg font-bold text-2xl touch-manipulation"
+                              class="plus flex items-center justify-center bg-light-background w-[35px] h-[35px] rounded-lg font-bold text-2xl"
                             >
                               <i class="icon-minus -mb-1"></i>
                             </button>
