--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
 
     <!-- Swiper JS -->
     <script src="swiper-bundle.min.js"></script>
-    <script src="script-obfuscated.js"></script>
-    <!-- <script src="index.js"></script> -->
+    <!-- <script src="script-obfuscated.js"></script> -->
+    <script src="index.js"></script>
   </body>
 </html>
