--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="ar">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
 
     <title>E-Commerce</title>
     <!-- Icomoon Icons -->
@@ -16,6 +19,9 @@
     />
     <!-- استيراد Swiper CSS -->
     <link rel="stylesheet" href="swiper-bundle.min.css" />
+
+    <!-- AOS CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- Tailwind CSS -->
     <link href="output.css" rel="stylesheet" />
@@ -176,6 +182,10 @@
                 <div class="static md:sticky md:top-5">
                   <div
                     class="mySwiper-1 mb-5 rounded-3xl overflow-hidden relative"
+                    data-aos="fade-up"
+                    data-aos-offset="200"
+                    data-aos-delay="99"
+                    data-aos-duration="1000"
                   >
                     <!-- Slides -->
                     <div class="slides swiper-wrapper">
@@ -209,7 +219,12 @@
                   </div>
 
                   <!-- Thumbnail -->
-                  <div class="thumbnail-swiper hidden mt-5 md:block">
+                  <div class="thumbnail-swiper hidden mt-5 md:block"
+                  data-aos="fade-up"
+                  data-aos-offset="200"
+                  data-aos-delay="90"
+                  data-aos-duration="1000"
+                  >
                     <div class="flex items-center gap-2 swiper-wrapper">
                       <div class="flex-1 cursor-pointer thumbnail swiper-slide">
                         <img
@@ -241,7 +256,12 @@
               </div>
 
               <div class="col-span-6">
-                <div class="content text-center md:text-start">
+                <div class="content text-center md:text-start"
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="99"
+                data-aos-duration="1000"
+                >
                   <div
                     class="flex items-center justify-center md:justify-start gap-1 personal-img"
                   >
@@ -310,7 +330,11 @@
                 <div
                   id="timer"
                   class="text-center text-light-primary font-bold text-sm md:text-lg lg:text-xl flex gap-2 lg:gap-5 justify-center items-center my-7"
-                >
+                  data-aos="fade-up"
+                  data-aos-offset="200"
+                  data-aos-delay="99"
+                  data-aos-duration="1000"
+                  >
                   <div
                     class="bg-light-textPrimary p-4 w-[90px] h-[100px] rounded-lg flex flex-col items-center justify-between relative overflow-hidden"
                   >
@@ -363,7 +387,12 @@
                 </div>
 
                 <!-- Form Order-->
-                <div class="form-order">
+                <div class="form-order"
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="99"
+                data-aos-duration="1000"
+                >
                   <div class="container mx-auto">
                     <form class="text-sm" action="">
                       <div class="quantity flex flex-col gap-4 justify-center">
@@ -510,7 +539,12 @@
             <div
               class="grid grid-cols-1 md:grid-cols-12 justify-items-center md:justify-items-stretch items-center gap-5"
             >
-              <div class="col-span-4 grid gap-5 h-[35vh]">
+              <div class="col-span-4 grid gap-5 h-[35vh]"
+              data-aos="fade-up"
+              data-aos-offset="200"
+              data-aos-delay="99"
+              data-aos-duration="1000"
+              >
                 <div class="flex items-center gap-4 justify-end">
                   <h1 class="text-right">صيغة مبتكرة علمياً</h1>
                   <img
@@ -539,7 +573,12 @@
                 </div>
               </div>
 
-              <div class="col-span-4 flex justify-center">
+              <div class="col-span-4 flex justify-center"
+              data-aos="fade-up"
+              data-aos-offset="200"
+              data-aos-delay="50"
+              data-aos-duration="1000"
+              >
                 <img
                   class="max-w-full h-auto"
                   src="./imags/features-product.png"
@@ -547,7 +586,12 @@
                 />
               </div>
 
-              <div class="col-span-4 grid gap-5 h-[35vh]">
+              <div class="col-span-4 grid gap-5 h-[35vh]"
+              data-aos="fade-up"
+              data-aos-offset="200"
+              data-aos-delay="99"
+              data-aos-duration="1000"
+              >
                 <div class="flex items-center gap-4 justify-start">
                   <img
                     class="w-12"
@@ -583,7 +627,12 @@
             <h1 class="text-center text-3xl font-bold mb-5">مراجعات عملائنا</h1>
             <!-- Swiper -->
             <div class="max-w-3xl mx-auto relative">
-              <div class="mySwiper-2 overflow-hidden">
+              <div class="mySwiper-2 overflow-hidden"
+              data-aos="fade-up"
+              data-aos-offset="200"
+              data-aos-delay="99"
+              data-aos-duration="1000"
+              >
                 <div class="swiper-wrapper">
                   <div
                     class="swiper-slide flex flex-col justify-center items-center px-16"
@@ -660,6 +709,10 @@
                 شاهد دورة الإنتاج
               </h1>
               <iframe
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="99"
+                data-aos-duration="1000"
                 class="aspect-video w-full h-full rounded-2xl"
                 src="https://www.youtube.com/embed/ULYQ1oEOPIY?si=p64idxMUZ_TRDmz1"
                 title="YouTube video player"
@@ -680,28 +733,51 @@
             <div
               class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 justify-items-center items-center gap-5"
             >
-              <div class="">
+              <div
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="99"
+                data-aos-duration="1000"
+              >
                 <img
                   class="max-w-full object-cover"
                   src="./imags/recommends-people-1.png"
                   alt=""
                 />
               </div>
-              <div>
+
+              <div
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="90"
+                data-aos-duration="1000"
+              >
                 <img
                   class="max-w-full object-cover"
                   src="./imags/recommends-people-2.png"
                   alt=""
                 />
               </div>
-              <div>
+
+              <div
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="80"
+                data-aos-duration="1000"
+              >
                 <img
                   class="max-w-full object-cover"
                   src="./imags/recommends-people-3.png"
                   alt=""
                 />
               </div>
-              <div>
+
+              <div
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="70"
+                data-aos-duration="1000"
+              >
                 <img
                   class="max-w-full object-cover"
                   src="./imags/recommends-people-4.png"
@@ -713,7 +789,7 @@
         </section>
 
         <!-- Services -->
-        <section class="services px-5 py-10">
+        <section>
           <div class="container mx-auto">
             <h1 class="text-center text-3xl font-bold mb-8">
               الأسئلة الأكثر شيوعا
@@ -723,6 +799,11 @@
             >
               <div
                 class="accordion-element cursor-pointer border border-light-primary p-4 rounded-3xl flex flex-col w-full"
+                class="services px-5 py-10"
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="99"
+                data-aos-duration="1000"
               >
                 <div class="flex justify-between items-center">
                   <p class="">هل يتوفر الصندوق بألوان متنوعة؟</p>
@@ -738,6 +819,11 @@
 
               <div
                 class="accordion-element cursor-pointer border border-light-primary p-4 rounded-3xl flex flex-col w-full"
+                class="services px-5 py-10"
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="90"
+                data-aos-duration="1000"
               >
                 <div class="flex justify-between items-center">
                   <p class="">هل يمكن غسل هذا الصندوق؟</p>
@@ -752,6 +838,10 @@
 
               <div
                 class="accordion-element cursor-pointer border border-light-primary p-4 rounded-3xl flex flex-col w-full"
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="80"
+                data-aos-duration="1000"
               >
                 <div class="flex justify-between items-center">
                   <p class="">هل يناسب هذا الصندوق الحوامل؟</p>
@@ -766,6 +856,10 @@
 
               <div
                 class="accordion-element cursor-pointer border border-light-primary p-4 rounded-3xl flex flex-col w-full"
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="70"
+                data-aos-duration="1000"
               >
                 <div class="flex justify-between items-center">
                   <p class="">هل يتوفر الصندوق بمقاسات أخرى؟</p>
@@ -780,6 +874,10 @@
 
               <div
                 class="accordion-element cursor-pointer border border-light-primary p-4 rounded-3xl flex flex-col w-full"
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="60"
+                data-aos-duration="1000"
               >
                 <div class="flex justify-between items-center">
                   <p class="">هل يمكن استرداد المبلغ ؟</p>
@@ -795,6 +893,10 @@
 
               <div
                 class="accordion-element cursor-pointer border border-light-primary p-4 rounded-3xl flex flex-col w-full"
+                data-aos="fade-up"
+                data-aos-offset="200"
+                data-aos-delay="50"
+                data-aos-duration="1000"
               >
                 <div class="flex justify-between items-center">
                   <p class="">سهل الاستعمال</p>
@@ -808,7 +910,7 @@
               </div>
             </div>
             <!-- button -->
-            <div class="mx-auto mt-16 flex justify-center items-center">
+            <div class="mx-auto mt-16 mb-16 flex justify-center items-center">
               <img class="max-w-full w-4" src="./imags/btn-l.svg" alt="" />
               <button
                 class="flex items-center mx-1 px-4 py-2 bg-light-primary text-light-textPrimary rounded-full hover:bg-[#0b875e] transition"
@@ -820,13 +922,19 @@
             </div>
           </div>
         </section>
-
-        
       </main>
     </div>
 
+    <!-- AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+
     <!-- Swiper JS -->
     <script src="swiper-bundle.min.js"></script>
+
+    <!-- JS -->
     <!-- <script src="script-obfuscated.js"></script> -->
     <script src="index.js"></script>
   </body>
